test/parser/empty-parenthesized-expression.cx
// RUN: %not %cx -parse %s | %FileCheck %s

void main() {
    // CHECK: [[@LINE+1]]:9: error: unexpected ')'
    if () {

    }
}
